<resources>
  <!--
  Copyright 2020 Ahmed Alaa-Eldin Zakaria Ali Khfagy
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
    <string name="app_name">Khfagy\'s Controller</string>
    <string name="this_button_moves_the_car_forward">This button moves the car forward</string>
    <string name="this_button_moves_the_car_right">This button moves the car right</string>
    <string name="this_button_moves_the_car_left">This button moves the car left</string>
    <string name="this_button_moves_the_car_backward">This button moves the car backward</string>
    <string name="this_button_stops_the_car">This button stops the car</string>
    <string name="this_button_stops_the_car_and_makes_it_flash">This button stops the car and makes it flash</string>
    <string name="this_button_disconnects_the_device">This button disconnects the device</string>
    <string name="recursive_creed">Recursive Creed</string>
    <string name="recursive_creed_logo">Recursive Creed logo</string>

</resources>
